@@ -17,6 +17,9 @@
 		+on-interaction
 			background-color: $zon-dark-grey
 			color: $white
+		&[aria-expanded="true"]
+			background-color: $zon-lighter-grey
+			color: $zon-dark-grey
 	&__teasers
 		counter-reset: buzz-box
 		list-style-type: none
