@@ -12,6 +12,8 @@ Change log for zeit.web
 
 - ZON-2591: Make logo pointer appear in IE>=10 again
 
+- MAINT: Add WAI-ARIA roles, states, and properties for accordion component
+
 
 2.44 (2016-01-04)
 -----------------
